--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -59,7 +59,7 @@ jobs:
           # Remove old container
           docker rm $(echo $IMAGE_NAME)
           # Run a new container from a new image
-          docker run -d \
+          docker run -p 8080:8080 -d \
           --restart always \
           --name $(echo $IMAGE_NAME) \
           $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
