--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -60,7 +60,7 @@ jobs:
           docker rm $(echo $IMAGE_NAME)
           # Run a new container from a new image
           docker run -p 8080:8080 -d \
-          -e BASE_URL='https://shorten.minidev.io/'
+          -e BASE_URL='https://shorten.minidev.io/' \
           --restart always \
           --name $(echo $IMAGE_NAME) \
           $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
