--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -61,6 +61,7 @@ jobs:
           # Run a new container from a new image
           docker run -p 8080:8080 -d \
           -e BASE_URL='https://shorten.minidev.io/' \
+          -v url-db:/etc/url-db \
           --restart always \
           --name $(echo $IMAGE_NAME) \
           $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
